# File_Synchronizer

./: README.md  pyproject.toml
sync_file/: cli.py  main.py  sync.py
